--- a/trunk/pom.xml
+++ b/trunk/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>net.unicon</groupId>
   <artifactId>issueScraper</artifactId>
-  <packaging>jar</packaging>
+  <packaging>war</packaging>
   <version>1.0-SNAPSHOT</version>
   <name>issueScraper</name>
   <url>http://maven.apache.org</url>
@@ -17,6 +17,7 @@
       <httpclient.version>3.0.1</httpclient.version>
       <jaxen.version>1.1.1</jaxen.version>
       <jtidy.version>4aug2000r7-dev</jtidy.version>
+      <ehcache.version>1.5.0</ehcache.version>
   </properties>
 
   <dependencies>
@@ -48,6 +49,12 @@
       <groupId>jtidy</groupId>
       <artifactId>jtidy</artifactId>
       <version>${jtidy.version}</version>
+      <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>net.sf.ehcache</groupId>
+      <artifactId>ehcache</artifactId>
+      <version>${ehcache.version}</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
