--- a/pom.xml
+++ b/pom.xml
@@ -18,9 +18,23 @@
       <jaxen.version>1.1.1</jaxen.version>
       <jtidy.version>4aug2000r7-dev</jtidy.version>
       <ehcache.version>1.5.0</ehcache.version>
+      <jstl.version>1.1.2</jstl.version>
+      <standard.version>1.1.2</standard.version>
   </properties>
 
   <dependencies>
+    <dependency>
+      <groupId>taglibs</groupId>
+      <artifactId>standard</artifactId>
+      <version>${standard.version}</version>
+      <scope>runtime</scope>
+    </dependency>
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>jstl</artifactId>
+      <version>${jstl.version}</version>
+      <scope>runtime</scope>
+    </dependency>
     <dependency>
       <groupId>commons-logging</groupId>
       <artifactId>commons-logging</artifactId>
